--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
             // Send a message to the parent (Retool) with specific origin
             // Replace with your Retool app's domain
             window.top.postMessage({ lat, lng }, '*');
-            console.log(window.parent)
-            console.log(window.parent?.parent)
+            console.log(window.parent[2])
 
         });
 
