--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
             window.top.postMessage({ lat, lng }, '*');
             console.log(window.parent[2])
 
+            console.log("logging window parent [2]")
+
         });
 
       }
