--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 
             // Send a message to the parent (Retool) with specific origin
             // Replace with your Retool app's domain
-            window.top.postMessage({ lat, lng }, '*');
+            window.parent[2].postMessage({ lat, lng }, '*');
             console.log(window.parent[2])
 
-            console.log("logging window parent [2]")
+            console.log("logging window parent [2] - sending event here")
 
         });
 
