--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             // Replace with your Retool app's domain
             window.parent[2].postMessage({ lat, lng }, '*');
             console.log(window.parent[2])
+            console.log("window object : ", window)
 
             console.log("logging window parent [2] - sending event here")
 
