--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             // Send a message to the parent (Retool) with specific origin
             // Replace with your Retool app's domain
-            window.parent[2].postMessage({ lat, lng }, '*');
+            Object.keys(window.parent).map(key => window.parent[key].postMessage({ lat, lng }, "*"))
             console.log(window.parent[2])
             console.log("window object : ", window)
 
