--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             console.log(window.parent[2])
             console.log("window object : ", window)
 
-            console.log("logging window parent [2] - sending event here")
+            console.log("mapping to all window.parent keys")
 
         });
 
