--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           geocoder.geocode({ location: { lat, lng } }, (results, status) => {
             if (status === 'OK' && results[0]) {
               const locationData = {
+                name : results[0]?.name,
                 address: results[0].formatted_address,
                 lat,
                 lng,
