--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Google Maps with Search and Markers</title>
     <style>
       #map {
-        height: 100%;
+        height: 90%;
+        margin : 10px;
+        border-radius: 4px;
       }
       html, body {
         height: 100%;
@@ -12,10 +14,26 @@
         padding: 0;
       }
       #pac-input {
-        margin-top: 10px;
-        padding: 5px;
-        font-size: 16px;
-        background-color: white;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 25px;
+        padding: 12px 20px;
+        font-size: 18px;
+        background-color: #fef2fd;
+        color: #333;
+        border: 2px solid #8000FF; /* Primary blue color */
+        border-radius: 25px;
+        width: 100%;
+        max-width: 500px; /* Optional: controls max width */
+        box-shadow: 0px 4px 6px rgba(179, 0, 255, 0.3); /* Light shadow */
+        outline: none;
+        transition: all 0.3s ease;
+      }
+
+      #pac-input:focus {
+        border-color: #FF007A; /* Darker blue on focus */
+        box-shadow: 0px 6px 8px rgba(174, 0, 255, 0.5);
+        background-color: #fff;
       }
     </style>
   </head>
